[package]
name = "puzzle8-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
#jemallocator = "0.5.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
